--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,11 @@ name = "pypi"
 [packages]
 flask = "*"
 python-dotenv = "*"
+flask-login = "*"
+authlib = "*"
+mysql-connector-python = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
