Added google auth for users. And navbar for students page for logout functionality (WIP: normal registration)

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,14 @@ python-dotenv = "*"
 flask-login = "*"
 authlib = "*"
 mysql-connector-python = "*"
+mysql = "*"
+flask-mysqldb = "*"
+email-validator = "*"
+flask-dance = "*"
+requests-oauthlib = "*"
+requests = "*"
+oauthlib = "*"
+pyopenssl = "*"
 
 [dev-packages]
 
